<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <ImageView
        android:id="@+id/img_logo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        android:layout_marginTop="38dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/edt_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/hint_edt_user"
        android:layout_marginTop="90dp"
        android:layout_below="@+id/img_logo_login"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/hint_edt_password"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/edt_user"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/edt_password"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btn_login"
        android:layout_height="40dp"
        android:layout_width="160dp"
        android:textSize="16sp"
        android:background="@drawable/shape_button"
        android:textColor="@color/colorWhite"
        android:elevation="4sp"
        android:layout_marginBottom="32dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textAllCaps="false"
        android:text="@string/btn_login"
        tools:targetApi="lollipop" />

</RelativeLayout>